Change title in home.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <!-- Link to favicon -->
     <link rel='shortcut icon' type='image/x-icon' href='' />
 
-    <!-- font awesome and google fonts -->
+    <!-- Font awesome and google fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
 
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>The Gamer Quiz!</title>
+
+      <!--Page Title-->
+    <title>The Gamer Quiz! - Home Page</title>
+
 </head>
 
 <body>
