--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 </head>
 
 <body>
+    
+        <h1 class="heading">
+            <img class="logo" src="assets/images/logo.png" alt="logo"> 
+        </h1>
+    
 
 
 </body>
