--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body class="flex-container">
     <header>
         <!--Logo aria label and link to home page-->
         <h1 class="heading">
@@ -36,15 +36,18 @@
 <!-- Outer container for the main content-->
 <div id="outer-container">
     <h2>Welcome to The Gamer Quiz!</h2>
-    <p>Intro text</p>
+    <p>The Gamer Quiz is the ultimate gaming quiz. Are you a video game pro? This quiz will test your knowdledge in gaming.</p>
+    <p> Select the buttons below to navigate across the different pages.</p>
+   <!--  <p>Select Play to start and then select the level of difficulty that you wish to take the quiz in and enjoy!</p>-->
+    <p>To go back to the home page simply click on the logo on the top.</p>
 
     <div class="buttons">
-      <button id="open-modal" class="btn">How to play</button>
+      <button class="btn">How to play</button>
       <a href="game.html" class="btn">Play</a>
       <a href="high-scores.html" id="high-scores" class="btn">High Scores</a>
     </div>
 
-  </div>
+</div>
 
   <!-- Container for the modal-->
   <div id="modal-container">
@@ -52,7 +55,6 @@
       <h2>How To Play</h2>
 
       <p>Instructions here</p>
-
 
       <button id="close-modal" class="btn">Close</button>
     </div>
