Change buttons hover effect

--- a/game.html
+++ b/game.html
@@ -42,9 +42,9 @@
         
         <!-- Here the QUIZ questions-->
         <!-- group the buttons-->
-        <div id="game" class="buttons">
+        <div id="game" class="buttons-container">
           <h2 id="question">What is the answer to this questions?</h2>
-          <div class="choice-container btn">
+          <div class="choice-container btn hover-button">
             <p class="choice-prefix">A</p>
             <p class="choice-text">Choice 1</p>
           </div>
