--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   
     <p>To go back to the home page simply click on the logo on the top.</p>
 
-    <div class="buttons">
-      <button class="btn" id="open-modal">How to play</button>
-      <a href="game.html" class="btn">Play</a>
-      <a href="high-scores.html" id="high-scores" class="btn">High Scores</a>
+    <div class="buttons-container ">
+      <button class="btn hover-button" id="open-modal">How to play</button>
+      <a href="game.html" class="btn hover-button">Play</a>
+      <a href="high-scores.html" id="high-scores" class="btn hover-button">High Scores</a>
     </div>
 
 </div>
