--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     
     <!--JavaScript-->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
 
 </html>
