--- a/game.html
+++ b/game.html
@@ -39,7 +39,27 @@
 
     <!-- Outer container for the main content-->
     <div class="outer-container">
-        
+
+        <!-- Here the Head's Up Display-->
+        <div class="container">
+            <div id="game" class="justify-center flex-column">
+              <div id="hud">
+                <div id="hud-item">
+                  <p class="hud-prefix">
+                    Question
+                  </p>
+                  <h1 class="hud-main-text" id="questionCounter"></h1>
+                </div>
+                <div id="hud-item">
+                  <p class="hud-prefix">
+                    Score
+                  </p>
+                  <h1 class="hud-main-text" id="score">
+                    0
+                  </h1>
+                </div>
+              </div>
+
         <!-- Here the QUIZ questions-->
         <!-- group the buttons-->
         <div id="game" class="buttons-container">
