Save High Scores in Local Storage

--- a/end.html
+++ b/end.html
@@ -61,6 +61,6 @@
         <a class="btn hover-button" href="/">Go Home</a>
       </div>
     </div>
-    <script src="end.js"></script>
+    <script src="assets/js/end.js"></script>
   </body>
 </html>
