--- a/game.html
+++ b/game.html
@@ -40,9 +40,12 @@
     <!-- Outer container for the main content-->
     <div class="outer-container">
 
+        <!-- Loader-->
+        <div id="loader"></div>
+
         <!-- Here the Head's Up Display-->
         <div class="container">
-            <div id="game" class="justify-center flex-column">
+            <div id="game" class="justify-center flex-column hidden">
               <div id="hud">
                 <div id="hud-item">
                   <p class="hud-prefix">
@@ -63,22 +66,22 @@
         <!-- Here the QUIZ questions-->
         <!-- group the buttons-->
         <div id="game" class="buttons-container">
-          <h2 id="question">What is the answer to this questions?</h2>
+          <h2 id="question"></h2>
           <div class="choice-container btn hover-button">
             <p class="choice-prefix">A</p>
-            <p class="choice-text" data-number="1">Choice 1</p>
+            <p class="choice-text" data-number="1"></p>
           </div>
           <div class="choice-container btn">
             <p class="choice-prefix">B</p>
-            <p class="choice-text" data-number="2">Choice 2</p>
+            <p class="choice-text" data-number="2"></p>
           </div>
           <div class="choice-container btn">
             <p class="choice-prefix">C</p>
-            <p class="choice-text" data-number="3">Choice 3</p>
+            <p class="choice-text" data-number="3"></p>
           </div>
           <div class="choice-container btn">
             <p class="choice-prefix">D</p>
-            <p class="choice-text" data-number="4">Choice 4</p>
+            <p class="choice-text" data-number="4"></p>
           </div>
         </div>
       </div>
