Fix bug 1 -issue with question display

--- a/game.html
+++ b/game.html
@@ -38,14 +38,14 @@
     </header>
 
     <!-- Outer container for the main content-->
-    <div class="outer-container">
+    <div class="outer-container flex-container">
 
         <!-- Loader-->
         <div id="loader"></div>
 
         <!-- Here the Head's Up Display-->
         <div class="container">
-            <div id="game" class="justify-center flex-column hidden">
+            <div id="game" class="hidden">
               <div id="hud">
                 <div id="hud-item">
                   <p class="hud-prefix">
