--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--Page Title-->
+    <!--Page Title-->
     <title>The Gamer Quiz! - Home Page</title>
 
 </head>
@@ -47,11 +47,12 @@
 
     <div class="buttons-container">
       <button class="btn hover-button" id="open-modal">How to play</button>
-      <a href="game.html" class="btn hover-button">Play</a>
+      <a href="game-select.html" class="btn hover-button">Play</a>
       <a href="high-scores.html" id="high-scores" class="btn hover-button">High Scores</a>
     </div>
 
 </div>
+
  <!--  Modal window to open and close how to play-->
   <!-- Container for the modal-->
   <div id="modal-container">
@@ -64,7 +65,6 @@
     </div>
   </div>
 
-    
     <!--JavaScript-->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/game.js"></script>
