Fix bug 5 - general responsiveness

--- a/game.html
+++ b/game.html
@@ -42,22 +42,22 @@
 
         <!-- Loader-->
         <div id="loader"></div>
-
-        <!-- Here the Head's Up Display-->
+        
+        <!-- Here the Scoreboard-->
         <div class="container">
             <div id="game" class="hidden">
-              <div id="hud">
-                <div id="hud-item">
-                  <p class="hud-prefix">
+              <div id="scoreboard">
+                <div id="scoreboard-item">
+                  <p class="scoreboard-prefix">
                     Question
                   </p>
-                  <h1 class="hud-main-text" id="questionCounter"></h1>
+                  <h1 class="scoreboard-main-text" id="questionCounter"></h1>
                 </div>
-                <div id="hud-item">
-                  <p class="hud-prefix">
+                <div id="scoreboard-item">
+                  <p class="scoreboard-prefix">
                     Score
                   </p>
-                  <h1 class="hud-main-text" id="score">
+                  <h1 class="scoreboard-main-text" id="score">
                     0
                   </h1>
                 </div>
