--- a/game-medium.html
+++ b/game-medium.html
@@ -40,22 +40,23 @@
     <!-- Outer container for the main content-->
     <div class="outer-container flex-container">
 
-        <div id="loader"></div>
-        <!-- Here the Head's Up Display-->
+            <div id="loader"></div>
+            
+        <!-- Here the Scoreboard-->
         <div class="container">
             <div id="game" class="hidden">
-              <div id="hud">
-                <div id="hud-item">
-                  <p class="hud-prefix">
+              <div id="scoreboard">
+                <div id="scoreboard-item">
+                  <p class="scoreboard-prefix">
                     Question
                   </p>
-                  <h1 class="hud-main-text" id="questionCounter"></h1>
+                  <h1 class="scoreboard-main-text" id="questionCounter"></h1>
                 </div>
-                <div id="hud-item">
-                  <p class="hud-prefix">
+                <div id="scoreboard-item">
+                  <p class="scoreboard-prefix">
                     Score
                   </p>
-                  <h1 class="hud-main-text" id="score">
+                  <h1 class="scoreboard-main-text" id="score">
                     0
                   </h1>
                 </div>
