Adjust layout to full widht

--- a/game-medium.html
+++ b/game-medium.html
@@ -13,11 +13,6 @@
     <!-- Link to favicon -->
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
-    <!-- Font awesome and google fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -50,7 +45,7 @@
                   <p class="scoreboard-prefix">
                     Question
                   </p>
-                  <h1 class="scoreboard-main-text" id="questionCounter"></h1>
+                  <h1 class="scoreboard-main-text" id="question-counter"></h1>
                 </div>
                 <div id="scoreboard-item">
                   <p class="scoreboard-prefix">
