--- a/game-select.html
+++ b/game-select.html
@@ -13,11 +13,6 @@
     <!-- Link to favicon -->
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
-    <!-- Font awesome and google fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -38,7 +33,7 @@
     </header>
 
     <!-- Outer container for the main content-->
-<div class="outer-container">
+<div class="outer-container intro-text">
 
         <h2>Select the Quiz level</h2>
         <div class="buttons-container">
