--- a/high-scores.html
+++ b/high-scores.html
@@ -13,11 +13,12 @@
     <!-- Link to favicon -->
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
+
     <!-- Font awesome and google fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-
+    
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -41,11 +42,18 @@
       <div id="end" class="buttons-container">
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">High Scores</h1>
+
+            <!--Trophy font awesome-->
+            <i class="fa-solid fa-trophy-star" style="color: #ffffff;"></i>
             <ul id="highScoresList"></ul>
             <a class="btn hover-button" href="index.html">Go Home</a>
         </div>
       </div>
     </div>
     <script src="assets/js/high-scores.js"></script>
+    
+  <!-- Font Awesome Script -->
+  <script src="https://kit.fontawesome.com/af51085c1b.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
