--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <!-- Link to favicon -->
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
-    <!-- Font awesome and google fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -39,11 +34,13 @@
 
 <!-- Outer container for the main content-->
 <div class="outer-container">
+    <div class="intro-text">
     <h2>Welcome to The Gamer Quiz!</h2>
     <p>The Gamer Quiz is the ultimate gaming quiz. Are you a video game pro? This quiz will test your knowdledge in gaming.</p>
     <p> Select the buttons below to navigate across the different pages.</p>
   
     <p>To go back to the home page simply click on the logo on the top.</p>
+    </div>
 
     <div class="buttons-container">
       <button class="btn hover-button" id="open-modal">How to play</button>
