Fix bug 2 - button style

--- a/game-select.html
+++ b/game-select.html
@@ -35,7 +35,7 @@
     <!-- Outer container for the main content-->
 <div class="outer-container intro-text">
 
-        <h2>Select the Quiz level</h2>
+        <h2 id="select-heading">Select the Quiz level</h2>
         <div class="buttons-container">
         <a href="game-easy.html" id="easy" class="btn hover-button">Easy</a>
         <a href="game-medium.html" id="medium" class="btn hover-button">Medium</a>
