--- a/end.html
+++ b/end.html
@@ -13,11 +13,6 @@
     <!-- Link to favicon -->
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
-    <!-- Font awesome and google fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -39,7 +34,13 @@
 
     <div class="outer-container">
       <div id="end" class="buttons-container">
+        <div class="player-score">
+        <h2>
+          Score
+        </h2>
         <h1 id="finalScore"></h1>
+      </div>
+
         <form>
           <input
             type="text"
@@ -47,6 +48,7 @@
             id="username"
             placeholder="username"
           />
+        </form>
           <button
             type="submit"
             class="btn hover-button"
@@ -56,7 +58,7 @@
           >
             Save
           </button>
-        </form>
+       
         <a class="btn hover-button" href="/game-select.html">Play Again</a>
         <a class="btn hover-button" href="/">Go Home</a>
       </div>
