Add a trophy on top of high scores

--- a/game-select.html
+++ b/game-select.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Description and keywords for SEO -->
+    <!-- Description and keywords for SEO -->
     <meta name="description" content="An online themed quiz about gaming">
     <meta name="keywords" content="video games, consoles, quiz, test, trivia, knowledge, game, gamer">
 
@@ -16,7 +16,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--Page Title-->
+    <!--Page Title-->
     <title>The Gamer Quiz! - Play</title>
 
 </head>
@@ -27,23 +27,23 @@
         <h1 class="heading">
             <a href="index.html" aria-label="Link to the homepage"></a>
             <a href="index.html">
-                <img class="logo" src="assets/images/logo.png" alt="logo"> 
+                <img class="logo" src="assets/images/logo.png" alt="logo">
             </a>
         </h1>
     </header>
 
     <!-- Outer container for the main content-->
-<div class="outer-container intro-text">
+    <div class="outer-container intro-text">
 
         <h2 id="select-heading">Select the Quiz level</h2>
-        <div class="buttons-container">
-        <a href="game-easy.html" id="easy" class="btn hover-button">Easy</a>
-        <a href="game-medium.html" id="medium" class="btn hover-button">Medium</a>
-        <a href="game-hard.html" id="hard" class="btn hover-button">Hard</a>
+        <div class="buttons-container btn-width">
+            <a href="game-easy.html" id="easy" class="btn hover-button">Easy</a>
+            <a href="game-medium.html" id="medium" class="btn hover-button">Medium</a>
+            <a href="game-hard.html" id="hard" class="btn hover-button">Hard</a>
         </div>
-</div>
+    </div>
 
-<!--JavaScript-->
-<script src="assets/js/game.js"></script>
+    <!--JavaScript-->
+    <script src="assets/js/game.js"></script>
 
 </html>
