--- a/index.html
+++ b/index.html
@@ -2,54 +2,55 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Description and keywords for SEO -->
-    <meta name="description" content="An online themed quiz about gaming">
-    <meta name="keywords" content="video games, consoles, quiz, test, trivia, knowledge, game, gamer">
+  <!-- Description and keywords for SEO -->
+  <meta name="description" content="An online themed quiz about gaming">
+  <meta name="keywords" content="video games, consoles, quiz, test, trivia, knowledge, game, gamer">
 
-    <!-- Link to favicon -->
-    <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
+  <!-- Link to favicon -->
+  <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-    <!--Page Title-->
-    <title>The Gamer Quiz! - Home Page</title>
+  <!--Page Title-->
+  <title>The Gamer Quiz! - Home Page</title>
 
 </head>
 
 <body class="flex-container">
-    <header>
-        <!--Logo aria label and link to home page-->
-        <h1 class="heading">
-            <a href="index.html" aria-label="Link to the homepage"></a>
-            <a href="index.html">
-                <img class="logo" src="assets/images/logo.png" alt="logo"> 
-            </a>
-        </h1>
-    </header>
+  <header>
+    <!--Logo aria label and link to home page-->
+    <h1 class="heading">
+      <a href="index.html" aria-label="Link to the homepage"></a>
+      <a href="index.html">
+        <img class="logo" src="assets/images/logo.png" alt="logo">
+      </a>
+    </h1>
+  </header>
 
-<!-- Outer container for the main content-->
-<div class="outer-container">
+  <!-- Outer container for the main content-->
+  <div class="outer-container">
     <div class="intro-text">
-    <h2>Welcome to The Gamer Quiz!</h2>
-    <p>The Gamer Quiz is the ultimate gaming quiz. Are you a video game pro? This quiz will test your knowdledge in gaming.</p>
-    <p> Select the buttons below to navigate across the different pages.</p>
-  
-    <p>To go back to the home page simply click on the logo on the top.</p>
+      <h2>Welcome to The Gamer Quiz!</h2>
+      <p>The Gamer Quiz is the ultimate gaming quiz. Are you a video game pro? This quiz will test your knowledge in
+        gaming.</p>
+      <p> Select the buttons below to navigate across the different pages.</p>
+
+      <p>To go back to the home page simply click on the logo on the top.</p>
     </div>
 
-    <div class="buttons-container">
+    <div class="buttons-container btn-width">
       <button class="btn hover-button" id="open-modal">How to play</button>
       <a href="game-select.html" class="btn hover-button">Play</a>
       <a href="high-scores.html" id="high-scores" class="btn hover-button">High Scores</a>
     </div>
-</div>
+  </div>
 
- <!--  Modal window to open and close how to play-->
+  <!--  Modal window to open and close how to play-->
   <!-- Container for the modal-->
   <div id="modal-container">
     <div id="modal-content">
@@ -61,9 +62,9 @@
     </div>
   </div>
 
-    <!--JavaScript-->
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/game.js"></script>
+  <!--JavaScript-->
+  <script src="assets/js/script.js"></script>
+  <script src="assets/js/game.js"></script>
 </body>
 
 </html>
