--- a/end.html
+++ b/end.html
@@ -2,67 +2,58 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Description and keywords for SEO -->
-    <meta name="description" content="An online themed quiz about gaming">
-    <meta name="keywords" content="video games, consoles, quiz, test, trivia, knowledge, game, gamer">
+  <!-- Description and keywords for SEO -->
+  <meta name="description" content="An online themed quiz about gaming">
+  <meta name="keywords" content="video games, consoles, quiz, test, trivia, knowledge, game, gamer">
 
-    <!-- Link to favicon -->
-    <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
+  <!-- Link to favicon -->
+  <link rel='shortcut icon' type='image/x-icon' href='assets/images/fav-icon16x16px.svg' />
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--Page Title-->
-    <title>The Gamer Quiz! - Congrats!</title>
+  <!--Page Title-->
+  <title>The Gamer Quiz! - Congrats!</title>
 </head>
 
 <body class="flex-container">
-    <header>
-        <!--Logo aria label and link to home page-->
-        <h1 class="heading">
-            <a href="index.html" aria-label="Link to the homepage"></a>
-            <a href="index.html">
-                <img class="logo" src="assets/images/logo.png" alt="logo"> 
-            </a>
-        </h1>
-    </header>
-<body>
+  <header>
+    <!--Logo aria label and link to home page-->
+    <h1 class="heading">
+      <a href="index.html" aria-label="Link to the homepage"></a>
+      <a href="index.html">
+        <img class="logo" src="assets/images/logo.png" alt="logo">
+      </a>
+    </h1>
+  </header>
+
+  <body>
 
     <div class="outer-container">
       <div id="end" class="buttons-container">
         <div class="player-score">
-        <h2>
-          Score
-        </h2>
-        <h1 id="finalScore"></h1>
-      </div>
+          <h2>
+            Score
+          </h2>
+          <h1 id="finalScore"></h1>
+        </div>
 
         <form>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            placeholder="username"
-          />
+          <input type="text" name="username" id="username" placeholder="username" />
         </form>
-          <button
-            type="submit"
-            class="btn hover-button"
-            id="saveScoreBtn"
-            onclick="saveHighScore(event)"
-            disabled
-          >
-            Save
-          </button>
-       
+        <button type="submit" class="btn hover-button" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>
+          Save
+        </button>
+
         <a class="btn hover-button" href="/game-select.html">Play Again</a>
         <a class="btn hover-button" href="/">Go Home</a>
       </div>
     </div>
     <script src="assets/js/end.js"></script>
   </body>
+
 </html>
