Fix broken link in go home end.hmtl

--- a/end.html
+++ b/end.html
@@ -50,7 +50,7 @@
         </button>
 
         <a class="btn hover-button" href="/game-select.html">Play Again</a>
-        <a class="btn hover-button" href="/">Go Home</a>
+        <a class="btn hover-button" href="/index.html">Go Home</a>
       </div>
     </div>
     <script src="assets/js/end.js"></script>
