Fix bug 6 - overflow with bg image

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body class="background-error overlay-bg">
+<body class="background-error">
     <div class="flex-container">
 
         <!-- 404 main content-->
