--- a/game-select.html
+++ b/game-select.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body class="flex-container">
+<body class="flex-container main-background">
     <header>
         <!--Logo aria label and link to home page-->
         <h1 class="heading">
