--- a/high-scores.html
+++ b/high-scores.html
@@ -20,7 +20,7 @@
   <title>The Gamer Quiz! - Congrats!</title>
 </head>
 
-<body class="flex-container">
+<body class="flex-container main-background">
   <header>
     <!--Logo aria label and link to home page-->
     <h1 class="heading">
@@ -35,7 +35,7 @@
 
     <div class="outer-container">
       <div id="end" class="buttons-container">
-        <div id="highScores" class="flex-center flex-column">
+        <div id="highScores">
 
           <!--Trophy font awesome-->
           <i class="trophy fa-solid fa-trophy fa-2xl"></i>
