--- a/end.html
+++ b/end.html
@@ -20,7 +20,7 @@
   <title>The Gamer Quiz! - Congrats!</title>
 </head>
 
-<body class="flex-container">
+<body class="flex-container main-background">
   <header>
     <!--Logo aria label and link to home page-->
     <h1 class="heading">
