Add lighthouse testing to TESTING.md

--- a/end.html
+++ b/end.html
@@ -49,8 +49,8 @@
           Save
         </button>
 
-        <a class="btn hover-button" href="/game-select.html">Play Again</a>
-        <a class="btn hover-button" href="/index.html">Go Home</a>
+        <a class="btn hover-button" href="game-select.html">Play Again</a>
+        <a class="btn hover-button" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="assets/js/end.js"></script>
