--- a/404.html
+++ b/404.html
@@ -31,10 +31,11 @@
             <h1>Game over</h1>
             <a href="index.html" class="btn hover-button">Try again?</a>
         </div>
+    </div>
 
-        <!--JavaScript-->
-        <script src="assets/js/script.js"></script>
-        <script src="assets/js/game.js"></script>
+    <!--JavaScript-->
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
 
 </html>
