Refactor getHighScores() function

--- a/high-scores.html
+++ b/high-scores.html
@@ -41,7 +41,7 @@
         <h2 id="finalScore">High Scores</h2>
 
         <!--Hight scores list-->
-        <ul id="highScoresList"></ul>
+        <ul id="high-score-list"></ul>
         <a class="btn hover-button" href="index.html">Go Home</a>
       </div>
     </div>
