Create template for test cases

--- a/end.html
+++ b/end.html
@@ -36,7 +36,7 @@
         <h2>
           Score
         </h2>
-        <h1 id="finalScore"></h1>
+        <h1 id="finalScore">:</h1>
       </div>
 
       <form>
