--- a/game-hard.html
+++ b/game-hard.html
@@ -37,7 +37,7 @@
     <div id="loader"></div>
 
     <!-- Here the Scoreboard-->
-    <div id="game" class="hidden">
+    <div id="play" class="hidden">
       <div id="scoreboard">
         <div class="scoreboard-item">
           <p class="scoreboard-prefix">
