Change format to  final-score and save-score-btn

--- a/high-scores.html
+++ b/high-scores.html
@@ -38,7 +38,7 @@
         <!--Trophy font awesome-->
         <i class="trophy fa-solid fa-trophy fa-2xl"></i>
         <!--Final score heading -->
-        <h2 id="finalScore">High Scores</h2>
+        <h2 id="final-score">High Scores</h2>
 
         <!--Hight scores list-->
         <ul id="high-score-list"></ul>
