--- a/end.html
+++ b/end.html
@@ -36,13 +36,13 @@
         <h2>
           Score
         </h2>
-        <h1 id="finalScore">:</h1>
+        <h1 id="final-score">:</h1>
       </div>
 
       <form>
         <input type="text" name="username" id="username" placeholder="username" />
       </form>
-      <button type="submit" class="btn hover-button" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>
+      <button type="submit" class="btn hover-button" id="save-score-btn" onclick="saveHighScore(event)" disabled>
         Save
       </button>
 
