--- a/end.html
+++ b/end.html
@@ -31,7 +31,7 @@
     </h1>
   </header>
   <div class="outer-container">
-    <div id="end" class="buttons-container">
+    <div id="end" class="buttons-container end-btns">
       <div class="player-score">
         <h2>
           Score
