Fix styles for index and game select

--- a/game-select.html
+++ b/game-select.html
@@ -33,7 +33,7 @@
     </header>
 
     <!-- Outer container for the main content-->
-    <div class="outer-container intro-text">
+    <div class="outer-container">
 
         <h2 id="select-heading">Select the Quiz level</h2>
         <div class="buttons-container btn-width">
