--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <p>Select Play to start and then select the level of difficulty that you wish to take the quiz in and enjoy!</p>
 
-      <button id="close-modal" class="btn">Close</button>
+      <button id="close-modal" class="btn hover-button">Close</button>
     </div>
   </div>
 
