Fix jshint errors

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="buttons-container btn-width">
       <button class="btn hover-button" id="open-modal">How to play</button>
       <a href="game-select.html" class="btn hover-button">Play</a>
-      <a href="high-scores.html" id="high-scores" class="btn hover-button">High Scores</a>
+      <a href="high-scores.html" id="high-scores-button" class="btn hover-button">High Scores</a>
     </div>
   </div>
 
