--- a/high-scores.html
+++ b/high-scores.html
@@ -33,7 +33,7 @@
 
   <div class="outer-container">
     <div id="end" class="buttons-container">
-      <div id="highScores">
+      <div id="high-scores">
 
         <!--Trophy font awesome-->
         <i class="trophy fa-solid fa-trophy fa-2xl"></i>
