Fix 404 lighthouse performance score

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
 
         <!-- 404 main content-->
         <div class="outer-container">
-            <img class="error" src="assets/images/404.svg" alt="404. Page not found">
+            <img class="error" src="assets/images/404.webp" alt="404. Page not found">
 
             <h1>Game over</h1>
             <a href="index.html" class="btn hover-button">Try again?</a>
@@ -34,7 +34,6 @@
     </div>
 
     <!--JavaScript-->
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/game.js"></script>
 </body>
 
