Add more content & spellcheck

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     <div id="modal-content">
       <h2>How To Play</h2>
 
-      <p>Select Play to start and then select the level of difficulty that you wish to take the quiz in and enjoy!</p>
+      <p>Click on the Play button to Begin to see if you are a Game Guru.
+        Select your preferred difficulty level.
+        Test your video game knowledge with our ultimate gamer quiz.
+        The quiz features randomly selected multiple choice questions, each based on a difficulty level,
+        you will select. Have Fun!</p>
 
       <button id="close-modal" class="btn hover-button">Close</button>
     </div>
