Fix styles for small  mobile screens

--- a/end.html
+++ b/end.html
@@ -40,7 +40,7 @@
       </div>
 
       <form>
-        <input type="text" name="username" id="username" placeholder="username" />
+        <input type="text" name="username" id="username" placeholder="username" maxlength="10" />
       </form>
       <button type="submit" class="btn hover-button" id="save-score-btn" onclick="saveHighScore(event)" disabled>
         Save
