--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p>Click on the Play button to Begin to see if you are a Game Guru.
         Select your preferred difficulty level.
         Test your video game knowledge with our ultimate gamer quiz.
-        The quiz features randomly selected multiple choice questions, each based on a difficulty level,
+        The quiz features randomly selected multiple choice questions, each based on a difficulty level
         you will select. Have Fun!</p>
 
       <button id="close-modal" class="btn hover-button">Close</button>
